# TokenTracker

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_db.py  test_pricing.py
tokentracker/: __init__.py  __main__.py  cli.py  client.py  db.py  pricing.py  query.py
