[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokentracker"
version = "0.1.0"
description = "Drop-in LLM cost tracker — change one import line, see where your money goes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yufeng He", email = "40085740+universeplayer@users.noreply.github.com" },
]
keywords = ["llm", "cost", "token", "tracker", "openai", "monitoring", "usage", "billing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
tokentracker = "tokentracker.cli:main"

[project.urls]
Homepage = "https://github.com/universeplayer/TokenTracker"
Repository = "https://github.com/universeplayer/TokenTracker"
Issues = "https://github.com/universeplayer/TokenTracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["tokentracker"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
